objects/MaintenanceMultipleAnnai__c.object
<CustomObject>
    <fields>
        <fullName>AccountPrint__c</fullName>
        <label>客先名</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>次回のお見積金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnaiType__c</fullName>
        <label>案内種類</label>
        <picklist>
            <picklistValues>
                <fullName>1Page</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2Pages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractNoPrint__c</fullName>
        <label>販売オーダーNo.</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractNo__c</fullName>
        <label>ContractNo</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemNamePrint__c</fullName>
        <label>装置名</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <label>ItemName</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JEOLContactPositionPrint__c</fullName>
        <label>日本電子・連絡先（担当者所属）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JEOLPipelineResponsible2Print__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>更新案内担当者2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MaintenanceMultipleAnnai1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JEOLPipelineResponsiblePrint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>更新案内担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MaintenanceMultipleAnnai</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JEOLRegionNamePrint__c</fullName>
        <label>日本電子・連絡先（支店）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JEOLReplyContactPositionPrint__c</fullName>
        <label>日本電子・回答先（担当者所属)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JOELReplyRegionNamePrint__c</fullName>
        <label>日本電子・回答先（支店）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ListIdLong__c</fullName>
        <description>For more than 255 characters</description>
        <label>ListIdLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ListId__c</fullName>
        <label>ListId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenancePeriodPrint__c</fullName>
        <label>契約期間</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaintenancePeriod__c</fullName>
        <label>MaintenancePeriod</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreviousAmount__c</fullName>
        <label>契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalAccountNamePrint__c</fullName>
        <label>客先名</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalAddressLine1Print__c</fullName>
        <label>住所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalAddressLine2Print__c</fullName>
        <label>住所2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalAddressPostalCodePrint__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalCompanyNamePrint__c</fullName>
        <label>送付先（会社名）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalContactFaxPrint__c</fullName>
        <label>日本電子・回答先（FAX等）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalContactPositionPrint__c</fullName>
        <label>担当者所属</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalContactTelPrint__c</fullName>
        <label>日本電子・連絡先（電話番号等）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalCustomerNameReply__c</fullName>
        <label>お客様名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalDeliveryLocationPrint__c</fullName>
        <label>納入場所</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalFooterComment__c</fullName>
        <label>フッターコメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalItemsNameUnitBodyPrint__c</fullName>
        <label>保守契約機器本体号機</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalListOptions__c</fullName>
        <label>オプション</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalOptionCustomerNameLabel__c</fullName>
        <label>お客様名/契約者様名</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RenewalOptionDateFormat__c</fullName>
        <label>西暦/和暦</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RenewalOptionHideChangeInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>更新エリアを隠す</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalPrintDate__c</fullName>
        <label>印刷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RenewalQuotationNumber__c</fullName>
        <label>更新案内見積書</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalTantoshyaPrint__c</fullName>
        <label>担当者名</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalTopSectionText__c</fullName>
        <label>トップセクション</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalUndergraduatePrint__c</fullName>
        <label>送付先（学部事業所）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UndergraduatePrint__c</fullName>
        <label>学部・事業所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UnitBodyPrint__c</fullName>
        <label>本体号機</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <label>UnitBody</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>MaintenanceMultipleAnnai</label>
    <nameField>
        <label>MaintenanceMultipleAnnai Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>